--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noImplicitAny": true,
     "strictPropertyInitialization": true,
     "preserveConstEnums": false,
+    "noUncheckedIndexedAccess": true,
     "target": "es5",
     "lib": [
       "es5",
